--- a/css/index.css
+++ b/css/index.css
@@ -1,42 +1,40 @@
-/**Main**/
-main {
-    display:flex;
+/* Media query para pantallas con ancho menor a 600px */
+@media (max-width: 1120px) {
 }
-.columna_1 {
-    flex: 3;
+
+.index {
+    display: flex;
+    height: 405px;
+    padding: 45px 30px;
 }
 .noticia {
-    margin: 30px 60px 50px 40px;
-    max-width: 1000px;
+    margin: 0;
+    margin-right: 20px;
+    width: auto;
+    height: 300px;
     background-color: var(--secundario);
-    height: 500px;
-
 }
 .noticia img {
-    height: auto;
-    max-width: 1000px;
-}
-.columna_2 {
-    flex: 2;
+    width: auto;
+    height: 300px;
 }
 .calendario {
-    height: 400px;
-    max-width: 600px;
+    display: block;
+    height: 300px;
+    width: 300px;
     background-color: var(--blanco);
-    margin: 30px 0px 0px 80px;
-}
-.columna_3 {
-    flex: 1;
+    margin: 0 20px;
 }
 .institutos {
     display: grid;
     grid-template-rows: repeat(4, 1fr);
-    width: auto;
-    margin: 30px 60px 0px 0px;
+    margin: 0;
+    margin-left: 20px;
     justify-content: right;
 }
+.institutos a {
+    height: 60px;
+}
 .institutos img {
-    height:100px;
-    width: auto;
-    margin: 0px 0px 20px 0px;
+    height: 60px;
 }
