Cambios en el index

--- a/css/somos.css
+++ b/css/somos.css
@@ -5,7 +5,7 @@
     --footer: rgb(124, 169, 202);
     --negro: #000;
     --blanco: #fff;
-    --gris_clarito: #ECECEC;
+    --gris_claro: #ECECEC;
     --fuente_principal: 'Hanken Grotesk', sans-serif;
     --fuente_secundaria: 'Questrial', sans-serif;
 }
