--- a/css/comunes.css
+++ b/css/comunes.css
@@ -5,7 +5,7 @@
     --footer: rgb(124, 169, 202);
     --negro: #000;
     --blanco: #fff;
-    --gris_clarito: #ECECEC;
+    --gris_claro: #ECECEC;
     --fuente_principal: 'Hanken Grotesk', sans-serif;
     --fuente_secundaria: 'Questrial', sans-serif;
 }
@@ -138,7 +138,7 @@ ul.menu li a {
     font-family: var(--fuente_secundaria);
     font-size: 20px;
     text-align: center;
-    color: var(--gris_clarito);
+    color: var(--gris_claro);
     text-decoration: none;
     padding: 20px 20px;
 }
