--- a/css/index.css
+++ b/css/index.css
@@ -3,37 +3,63 @@
 }
 main {
     display: flex;
-    height: 405px;
-    padding: 45px 30px;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
 .noticia {
     margin: 0;
-    margin-right: 20px;
-    width: auto;
-    height: 300px;
-    background-color: var(--secundario);
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    position: relative;
 }
 .noticia img {
-    width: auto;
-    height: 300px;
+    width: 100%;
+    height: 100%;
+    
 }
-.calendario {
-    display: block;
-    height: 300px;
-    width: 300px;
-    background-color: var(--blanco);
-    margin: 0 20px;
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(124, 169, 202, 0.5); /* Superposición de color con opacidad */
+    pointer-events: none; /* Permite la interacción con los elementos debajo */
 }
 .institutos {
-    display: grid;
-    grid-template-rows: repeat(4, 1fr);
-    margin: 0;
-    margin-left: 20px;
-    justify-content: right;
+    position: absolute; /* Coloca el contenedor encima de la imagen */
+    top: 85%;
+    display: flex;
+    justify-content: center;
+    align-content:center;
+    width: 100%;
 }
 .institutos a {
-    height: 60px;
+    height: 100px;
 }
 .institutos img {
-    height: 60px;
+    height: 100px;
+    opacity: 1;
+}
+button {
+    position: absolute;
+    display: flex;
+    top: 45%;
+    height: 100px;
+    width: auto;
+    background-color: transparent;
+    border: none;
+}
+.flecha:hover {
+    cursor: pointer;
+}
+.boton-izquierda {
+    left: 5%;
+}
+.boton-derecha {
+    rotate: 180deg;
+    right: 5%;
 }
